--- a/manage_me/templates/login.html
+++ b/manage_me/templates/login.html
@@ -23,12 +23,12 @@
 						{{ form.password.label() }}
 					</div>
 					<div class="input-field">
-						{{ form.login(class="btn amber lighten-2") }}
+						{{ form.login(class="btn deep-purple lighten-2") }}
 					</div>
 				</form>
 			</div>
 			<div class="card-action center-align">
-				Already an account? Register <a href="">here</a>
+				No account yet? Register <a href="" class="deep-purple-text lighten-2">here</a>
 			</div>
 		</div>
 	</div>
