Added courselist page and login btn redirects to homepage

--- a/manage_me/templates/login.html
+++ b/manage_me/templates/login.html
@@ -23,7 +23,8 @@
 						{{ form.password.label() }}
 					</div>
 					<div class="input-field">
-						{{ form.login(class="btn deep-purple lighten-2") }}
+						<!--{{ form.login(class="btn deep-purple lighten-2") }}-->
+						<a href="{{ url_for('projects.home') }}" class="btn deep-purple">Login</a>
 					</div>
 				</form>
 			</div>
