--- a/manage_me/templates/navbar.html
+++ b/manage_me/templates/navbar.html
@@ -1,33 +1,33 @@
 <div class="navbar-fixed">
-	<nav>
-		<div class="nav-wrapper deep-purple lighten-2">
-			<ul class="right">
-				<li>
-					<a href="">
-						<i class="material-icons">face</i>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<i class="material-icons">chat</i>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<i class="material-icons">today</i>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<i class="material-icons">notifications</i>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<i class="material-icons">more_vert</i>
-					</a>
-				</li>
-			</ul>
-		</div>
-	</nav>
+<nav>
+	<div class="nav-wrapper deep-purple lighten-2">
+		<ul class="center">
+			<li>
+				<a href="">
+					<i class="material-icons">face</i>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<i class="material-icons">chat</i>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<i class="material-icons">today</i>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<i class="material-icons">notifications</i>
+				</a>
+			</li>
+			<li>
+				<a href="{{ url_for('universities.course_list') }}">
+					<i class="material-icons">school</i>
+				</a>
+			</li>
+		</ul>
+	</div>
+</nav>
 </div>
