--- a/manage_me/templates/base.html
+++ b/manage_me/templates/base.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<!-- Material Icons -->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<!-- Manifest -->
+	<link rel="manifest" href="../../manifest.json">
 	<title>{% block title %}{% endblock title %}</title>
 <body class="grey lighten-5">
 	
