Added project create form

--- a/manage_me/templates/home.html
+++ b/manage_me/templates/home.html
@@ -34,7 +34,7 @@
 		<div class="card-panel small z-depth-1 animated jackInTheBox">
 			<div class="row valign-wrapper">
 				<div class="col s2">
-					<i class="material-icons deep-purple-text">folder</i>
+					<i class="material-icons deep-purple-text">work</i>
 				</div>
 				<div class="col s10">
 					<h6 class="deep-purple-text">Self Management App</h6>	
@@ -52,7 +52,7 @@
 		<div class="card-panel small z-depth-1 animated jackInTheBox">
 			<div class="row valign-wrapper">
 				<div class="col s2">
-					<div class="material-icons deep-purple-text lighten-2">folder</div>
+				<div class="material-icons deep-purple-text lighten-2">work</div>
 				</div>
 				<div class="col s10">
 					<h6 class="deep-purple-text">Computer For Change</h6>
