--- a/manage_me/templates/floating_button.html
+++ b/manage_me/templates/floating_button.html
@@ -3,10 +3,14 @@
     <i class="large material-icons">add</i>
   </a>
   <ul>
-    <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-    <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-    <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-    <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+  	<!-- Project -->
+    <li><a href="{{ url_for('projects.project_create') }}" class="btn-floating red"><i class="material-icons">work</i></a></li>
+    <!-- Milestones -->
+    <li><a class="btn-floating yellow darken-1"><i class="material-icons">access_time</i></a></li>
+    <!-- Notes -->
+    <li><a class="btn-floating green"><i class="material-icons">edit</i></a></li>
+    <!-- Courses -->
+    <li><a class="btn-floating blue"><i class="material-icons">school</i></a></li>
   </ul>
 </div>
       
