Added preferences pages

--- a/manage_me/templates/course_list.html
+++ b/manage_me/templates/course_list.html
@@ -19,4 +19,11 @@
 		</div>
 	</a>
 </div>
+
+<!-- Floating button redirecting to homepage -->
+<div class="fixed-action-btn">
+	<a href="{{ url_for('projects.home') }}" class="btn-floating btn-large deep-purple">
+		<i class="material-icons">home</i>
+	</a>
+</div>
 {% endblock body %}
