--- a/manage_me/templates/navbar.html
+++ b/manage_me/templates/navbar.html
@@ -3,7 +3,7 @@
 	<div class="nav-wrapper deep-purple lighten-2">
 		<ul class="center">
 			<li>
-				<a href="">
+				<a href="{{ url_for('preferences.user_preferences') }}">
 					<i class="material-icons">face</i>
 				</a>
 			</li>
