Changed the width and colors of login card

--- a/manage_me/templates/login.html
+++ b/manage_me/templates/login.html
@@ -4,13 +4,13 @@
 
 {% block body %}
 <div class="row">
-	<div class="col s10 offset-s1">
+	<div class="col s12">
 		<div class="card">
 			<div class="card-image center-align">
-				<i class="material-icons large">face</i>
+				<i class="material-icons large deep-purple-text animated rotateIn">face</i>
 			</div>
 			<div class="card-content center-align">
-				<span class="card-title">Login</span>
+				<span class="card-title deep-purple-text">Login</span>
 				<!-- form -->
 				<form action="" method="post">
 					{{ form.csrf_token }}
