--- a/manage_me/templates/home.html
+++ b/manage_me/templates/home.html
@@ -21,9 +21,10 @@
 		<div class="card-panel small z-depth-1 animated jackIntheBox">
 			<div class="row valign-wrapper">
 				<div class="col s2">
-					<i class="material-icons">face</i>
+					<img src="https://linkconnects.com/uploads/d3ab3e7df0d626f98bb84c9a97982d4d.jpg" alt="" class="circle responsive-img">
 				</div>
 				<div class="col s10">
+					<h6 class="grey-text">{{ date }}</h6>
 					<small>Hi John, seems you have no tasks planned for today</small>
 				</div>
 			</div>
@@ -31,41 +32,46 @@
 	</div>	
 	
 	<div class="col s12">
-		<div class="card-panel small z-depth-1 animated jackInTheBox">
-			<div class="row valign-wrapper">
-				<div class="col s2">
-					<i class="material-icons deep-purple-text">work</i>
-				</div>
-				<div class="col s10">
-					<h6 class="deep-purple-text">Self Management App</h6>	
-					<span class="grey-text">Entrepreneurship Hatchery</span>
-					<br>
-					<small class="grey-text">Due on 20 Jan 2020</small>
-					<div class="progress">
-						<div class="determinate" style="width: 90%"></div>
+		<a href="">
+			<div class="card-panel small z-depth-1 animated jackInTheBox">
+				<div class="row valign-wrapper">
+					<div class="col s2">
+						<i class="material-icons deep-purple-text">work</i>
 					</div>
-				</div>		
+					<div class="col s10">
+						<h6 class="deep-purple-text">Self Management App</h6>	
+						<span class="grey-text">Entrepreneurship Hatchery</span>
+						<br>
+						<small class="grey-text">Due on 20 Jan 2020</small>
+						<div class="progress">
+							<div class="determinate" style="width: 90%"></div>
+						</div>
+					</div>		
+				</div>
 			</div>
-		</div>
+		</a>
 	</div>
+
 	<div class="col s12">
-		<div class="card-panel small z-depth-1 animated jackInTheBox">
-			<div class="row valign-wrapper">
-				<div class="col s2">
-				<div class="material-icons deep-purple-text lighten-2">work</div>
-				</div>
-				<div class="col s10">
-					<h6 class="deep-purple-text">Computer For Change</h6>
-					<span class="grey-text">CB - Kewarganegaraan</span>
-					<br>
-					<small class="grey-text">Due on 19 Jan 2020</small>
-					
-					<div class="progress">
-						<div class="determinate" style="width: 95%"></div>
+		<a href="">
+			<div class="card-panel small z-depth-1 animated jackInTheBox">
+				<div class="row valign-wrapper">
+					<div class="col s2">
+						<div class="material-icons deep-purple-text lighten-2">work</div>
+					</div>
+					<div class="col s10">
+						<h6 class="deep-purple-text">Computer For Change</h6>
+						<span class="grey-text">CB - Kewarganegaraan</span>
+						<br>
+						<small class="grey-text">Due on 19 Jan 2020</small>
+
+						<div class="progress">
+							<div class="determinate" style="width: 95%"></div>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+		</a>
 	</div>
 </div>
 {% endblock body %}
