--- a/manage_me/templates/navbar.html
+++ b/manage_me/templates/navbar.html
@@ -4,7 +4,7 @@
 		<ul class="center">
 			<li>
 				<a href="{{ url_for('preferences.user_preferences') }}">
-					<i class="material-icons">face</i>
+					<i class="material-icons">build</i>
 				</a>
 			</li>
 			<li>
