--- a/manage_me/templates/preferences.html
+++ b/manage_me/templates/preferences.html
@@ -5,10 +5,60 @@
 {% include 'navbar.html' %}
 
 {% block body %}
+<!-- Preferences -->
 <div class="row">
 	<div class="col s12">
+		
 		<div class="card-panel animated jackInTheBox">
-			<h6 class="deep-purple-text">Preferences</h6>
+			<div class="row valign-wrapper">
+				<div class="col s2">
+					<img class="circle responsive-img" src="https://via.placeholder.com/150" alt="profile-pic" srcset="">
+				</div>
+				<div class="col s10">
+					<h6 class="deep-purple-text">Profile</h6>
+				</div>
+			</div>
+		</div>
+		
+		<div class="card-panel animated jackInTheBox">
+			<div class="row valign-wrapper">
+				<div class="col s2">
+					<i class="material-icons tiny deep-purple-text">build</i>
+				</div>
+				<div class="col s10">
+					<h6 class="deep-purple-text">Preferences</h6>
+					<div class="row valign-wrapper">
+						<div class="col s8">
+							Motivational Quotes
+						</div>
+						<div class="col s4">
+  							<div class="switch">
+    							<label>
+      								<input type="checkbox">
+      								<span class="lever"></span>
+    							</label>
+  							</div>
+						</div>
+					</div>
+					<div class="row valign-wrapper">
+						<div class="col s8">
+							Block Apps
+						</div>
+						<div class="col s4">
+  							<div class="switch">
+    							<label>
+
+      								<input type="checkbox">
+      								<span class="lever"></span>
+
+    							</label>
+  							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Block app -->
+			<!-- Motivational Quotes -->
 		</div>
 	</div>
 </div>
