--- a/manage_me/templates/course_list.html
+++ b/manage_me/templates/course_list.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="row">
-	<a href="">
+	<a href="{{ url_for('universities.course_detail') }}">
 		<div class="card-panel small animated jackInTheBox">
 			<div class="row valign-wrapper">
 				<div class="col s2">
