--- a/manage_me/templates/home.html
+++ b/manage_me/templates/home.html
@@ -32,7 +32,7 @@
 	</div>	
 	
 	<div class="col s12">
-		<a href="">
+		<a href="{{ url_for('projects.project_detail') }}">
 			<div class="card-panel small z-depth-1 animated jackInTheBox">
 				<div class="row valign-wrapper">
 					<div class="col s2">
