--- a/manage_me/templates/course_detail.html
+++ b/manage_me/templates/course_detail.html
@@ -7,7 +7,7 @@
 {% block body %}
 <div class="row">
 	<div class="col s12">
-		<div class="card-panel small">
+		<div class="card-panel small animated jackInTheBox">
 			<div class="row valign-wrapper">
 				<div class="col s2">
 					<i class="material-icons tiny deep-purple-text">school</i>
@@ -35,27 +35,27 @@
 	</div>
 	
 	<div class="col s6">
-		<div class="card-panel small">
+		<div class="card-panel deep-purple lighten-5 z-depth-2 animated jello">
 			<div class="row valign wrapper">
 				<div class="col s2">
 
 				</div>
 				<div class="col s10">
 					<h6 class="deep-purple-text"><a href="" class="deep-purple-text">Notes 1</a></h6>
-					<small class="truncate">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis doloremque ea illum. Sed, nisi omnis consequuntur nulla dolores nostrum, modi cumque quibusdam</small>
+					<small class="truncate deep-purple-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis doloremque ea illum. Sed, nisi omnis consequuntur nulla dolores nostrum, modi cumque quibusdam</small>
 				</div>
 			</div>
 		</div>
 	</div>
 	
 	<div class="col s6">
-		<div class="card-panel">
+		<div class="card-panel deep-purple lighten-5 z-depth-2 animated jello">
 			<div class="row valign wrapper">
 				<div class="col s2">
 				</div>
 				<div class="col s10">
 					<h6><a href="" class="deep-purple-text">Notes 2</a></h6>
-					<small class="truncate">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis doloremque ea illum. Sed, nisi omnis consequuntur nulla dolores nostrum, modi cumque quibusdam</small>
+					<small class="truncate deep-purple-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis doloremque ea illum. Sed, nisi omnis consequuntur nulla dolores nostrum, modi cumque quibusdam</small>
 				</div>
 				</div>
 			</div>
