--- a/manage_me/templates/course_detail.html
+++ b/manage_me/templates/course_detail.html
@@ -61,14 +61,17 @@
 			</div>
 		</div>
 	</div>
+
 </div>
+
 
 <div class="fixed-action-btn">
 	<a class="btn-floating btn-large deep-purple">
 		<i class="material-icons">add</i>
 	</a>
 	<ul>
-		<li><a href="" class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+		<li><a href="{{ url_for('projects.project_create') }}" class="btn-floating red"><i class="material-icons">work</i></a></li>
+		<li><a href="" class="btn-floating blue"><i class="material-icons">description</i></a></li>
 	</ul>
 </div>
 {% endblock body %}
