--- a/manage_me/templates/preferences.html
+++ b/manage_me/templates/preferences.html
@@ -12,53 +12,50 @@
 		<div class="card-panel animated jackInTheBox">
 			<div class="row valign-wrapper">
 				<div class="col s2">
-					<img class="circle responsive-img" src="https://via.placeholder.com/150" alt="profile-pic" srcset="">
+					<img class="circle responsive-img" src="https://linkconnects.com/uploads/d3ab3e7df0d626f98bb84c9a97982d4d.jpg" alt="profile-pic" srcset="">
 				</div>
 				<div class="col s10">
-					<h6 class="deep-purple-text">Profile</h6>
+					<h5 class="deep-purple-text">John Doe</h5>
+					<small class="grey-text">Bina Nusantara University</small>
+				</div>
+			</div>
+			<div class="row valign-wrapper">
+				<div class="col s2">
+					<i class="tiny material-icons deep-purple-text">email</i>
+				</div>
+				<div class="col s10">
+					<small class="grey-text">john.doe@binus.ac.id</small>
 				</div>
 			</div>
 		</div>
 		
 		<div class="card-panel animated jackInTheBox">
-			<div class="row valign-wrapper">
-				<div class="col s2">
-					<i class="material-icons tiny deep-purple-text">build</i>
-				</div>
-				<div class="col s10">
-					<h6 class="deep-purple-text">Preferences</h6>
-					<div class="row valign-wrapper">
-						<div class="col s8">
-							Motivational Quotes
-						</div>
-						<div class="col s4">
-  							<div class="switch">
-    							<label>
-      								<input type="checkbox">
-      								<span class="lever"></span>
-    							</label>
-  							</div>
-						</div>
-					</div>
-					<div class="row valign-wrapper">
-						<div class="col s8">
-							Block Apps
-						</div>
-						<div class="col s4">
-  							<div class="switch">
-    							<label>
-
-      								<input type="checkbox">
-      								<span class="lever"></span>
-
-    							</label>
-  							</div>
-						</div>
-					</div>
+			<div class="row valign-wrapper">	
+				<div class="col s12">
+					<table class="">
+						<thead>
+							<tr>
+								<th class="deep-purple-text">Preferences</th>	
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Motivational quotes</td>
+								<td>
+									<div class="switch">
+										<label for="">
+											on
+											<input type="checkbox" name="" id="">
+											<span class="lever"></span>
+											off
+										</label>
+									</div>
+								</td>
+							</tr>
+						</tbody>
+					</table>
 				</div>
 			</div>
-			<!-- Block app -->
-			<!-- Motivational Quotes -->
 		</div>
 	</div>
 </div>
