--- a/manage_me/templates/base.html
+++ b/manage_me/templates/base.html
@@ -11,7 +11,7 @@
 	<!-- Material Icons -->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!-- Manifest -->
-	<link rel="manifest" href="{{ url_for('static', filename="manifest.json") }}">
+	<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
 	<meta name="apple-mobile-web-app-capable" content="yes">
   	<meta name="apple-mobile-web-app-status-bar-style" content="transparent">
 	<title>{% block title %}{% endblock title %}</title>
