Moved manifest file

--- a/manage_me/templates/navbar.html
+++ b/manage_me/templates/navbar.html
@@ -14,7 +14,7 @@
 			</div>
 		</div>
 	</li>	
-	<li><a href="{{ url_for('preferences.preferences') }}">
+	<li><a href="{{ url_for('preferences.user_preferences') }}">
 			<i class="material-icons">build</i>
 			Settings
 	</a></li>
