--- a/manage_me/templates/navbar.html
+++ b/manage_me/templates/navbar.html
@@ -1,7 +1,10 @@
 <div class="navbar-fixed">
 <nav>
 	<div class="nav-wrapper deep-purple lighten-2">
-
+		<ul>
+			<!-- Sidenav trigger -->
+			<li><a href="" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a></li>
+		</ul>
 	</div>
 </nav>
 </div>
