collaborators and notes

--- a/manage_me/templates/course_detail.html
+++ b/manage_me/templates/course_detail.html
@@ -71,7 +71,7 @@
 	</a>
 	<ul>
 		<li><a href="{{ url_for('projects.project_create') }}" class="btn-floating red"><i class="material-icons">work</i></a></li>
-		<li><a href="" class="btn-floating blue"><i class="material-icons">description</i></a></li>
+		<li><a href="{{ url_for('notes.notes_create') }}" class="btn-floating blue"><i class="material-icons">description</i></a></li>
 	</ul>
 </div>
 {% endblock body %}
