--- a/manage_me/templates/preferences.html
+++ b/manage_me/templates/preferences.html
@@ -57,13 +57,27 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="card-panel animated jackInTheBox">
+			<div class="row valign-wrapper">
+				<div class="col s2">
+					<i class="tiny material-icons deep-purple-text">info</i>
+				</div>
+				<div class="col s10">
+					<h6 class="deep-purple-text">About</h6>
+					<p class="grey-text">
+					ManageMe is an all in one tool for students. With this tool we hope students will be be able to better organize their college responsibilites
+					</p>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
 <!-- Floating action button -->
 <div class="fixed-action-btn">
-	<a href="{{ url_for('projects.home') }}" class="btn-floating btn-large deep-purple">
-		<i class="material-icons">home</i>
+	<a href="" class="btn-floating btn-large deep-purple">
+		<i class="material-icons">edit</i>
 	</a>
 </div>
 {% endblock body %}
