--- a/manage_me/templates/project_detail.html
+++ b/manage_me/templates/project_detail.html
@@ -6,9 +6,6 @@
 
 {% block body %}
 <!-- Floating chart -->
-
-
-
 <div class="row">
 	<!-- -->
 	<div class="col s12">
@@ -20,6 +17,26 @@
 				<div class="col s10">
 					<small class="grey-text">Entrepreneurship Hatchery</small>
 					<h6 class="deep-purple-text">Self Management App</h6>
+				</div>
+			</div>
+			<div class="row valign-wrapper">
+				<div class="col s2">
+					<i class="tiny material-icons deep-purple-text">group</i>
+				</div>
+				<div class="col s10">
+					<small class="grey-text">Team</small>
+					<h6 class="deep-purple-text">Collaborators</h6>
+					<div class="row">
+						<div class="col s2">
+							<img src="https://linkconnects.com/uploads/d3ab3e7df0d626f98bb84c9a97982d4d.jpg" alt="" class="circle responsive-img">
+						</div>
+						<div class="col s2">
+							<img src="https://linkconnects.com/uploads/d3ab3e7df0d626f98bb84c9a97982d4d.jpg" alt="" class="circle responsive-img">
+						</div>
+						<div class="col s2">
+							<img src="https://linkconnects.com/uploads/d3ab3e7df0d626f98bb84c9a97982d4d.jpg" alt="" class="circle responsive-img">
+						</div>
+					</div>	
 				</div>
 			</div>
 		</div>
@@ -72,12 +89,29 @@
 	</div>
 </div>
 
+<!-- Modal -->
+<div class="modal" id="modal1">
+	<div class="modal-content">
+		<h6 class="modal-header deep-purple-text">Add collaborator</h6>
+		<form action="" method="post">
+			<div class="input-field">
+				<input type="text" name="name" class="validate">
+				<label for="name">Name</label>
+			</div>
+		</form>
+	</div>
+	<div class="modal-footer">
+		<a href="" class="btn-small deep-purple lighten-2">Submit</a>
+	</div>
+</div>
+
 <!-- Floating button redirecting to homepage -->
 <div class="fixed-action-btn">
 	<a class="btn-floating btn-large deep-purple">
 		<i class="material-icons">add</i>
 	</a>
 	<ul>
+		<li><a href="#modal1" class="btn-floating green modal-trigger"><i class="material-icons">group</i></a></li>
 		<li><a href="{{ url_for('projects.milestone_create') }}" class="btn-floating red"><i class="material-icons">access_time</i></a></li>
 		<li><a href="" class="btn-floating yellow"><i class="material-icons">edit</i></a></li>
 	</ul>
