Semi final version

--- a/manage_me/templates/floating_button.html
+++ b/manage_me/templates/floating_button.html
@@ -5,10 +5,8 @@
   <ul>
   	<!-- Project -->
     <li><a href="{{ url_for('projects.project_create') }}" class="btn-floating red"><i class="material-icons">work</i></a></li>
-    <!-- Milestones -->
-    <li><a href="{{ url_for('projects.milestone_create') }}" class="btn-floating yellow darken-1"><i class="material-icons">access_time</i></a></li>
     <!-- Notes -->
-    <li><a class="btn-floating green"><i class="material-icons">edit</i></a></li>
+    <li><a href="" class="btn-floating green"><i class="material-icons">edit</i></a></li>
     <!-- Courses -->
     <li><a class="btn-floating blue"><i class="material-icons">school</i></a></li>
   </ul>
