--- a/manage_me/templates/home.html
+++ b/manage_me/templates/home.html
@@ -12,7 +12,7 @@
 <!-- Quote section -->
 <blockquote class="animated fadeInLeft">
 	<h6 class="deep-purple-text">Today's Quote</h6>
-	Step by step and the thing is done.
+	<p>Step by step and the thing is done.</p>
 </blockquote>
 
 <!-- Projects overview -->
