--- a/manage_me/templates/navbar.html
+++ b/manage_me/templates/navbar.html
@@ -5,13 +5,10 @@
 			<ul class="right">
 				<li><a href="{{ url_for('preferences.user_preferences') }}"><i class="tiny material-icons">build</i></a></li>
 				<li><a href="{{ url_for('universities.course_list') }}"><i class="material-icons">school</i></a></li>
+				<!-- Sidenav trigger -->
+				<li><a href="{{ url_for('users.login') }}"><i class="material-icons">forward</i></a></li>
 			</ul>
 		</div>
 	</nav>
 </div>
-
-<!-- -->
-<ul class="sidenav" id="side">
-	<li><a href="{{ url_for('preferences.user_preferences') }}"><i class="material-icons">build</i></a></li>
-</ul>
 
