--- a/manage_me/templates/preferences.html
+++ b/manage_me/templates/preferences.html
@@ -21,10 +21,19 @@
 			</div>
 			<div class="row valign-wrapper">
 				<div class="col s2">
-					<i class="tiny material-icons deep-purple-text">email</i>
+					<i class="small material-icons deep-purple-text">email</i>
 				</div>
 				<div class="col s10">
 					<small class="grey-text">john.doe@binus.ac.id</small>
+				</div>
+			</div>
+			<div class="row valign-wrapper">
+				<div class="col s2">
+					<i class="material-icons deep-purple-text small">redeem</i>
+				</div>
+				<div class="col s10">
+					<h4 class="deep-purple-text">250 points</h4>
+					<small><a href="" class="deep-purple-text">Redeem</a></small>
 				</div>
 			</div>
 		</div>
@@ -66,7 +75,7 @@
 				<div class="col s10">
 					<h6 class="deep-purple-text">About</h6>
 					<p class="grey-text">
-					ManageMe is an all in one tool for students. With this tool we hope students will be be able to better organize their college responsibilites
+					ManageMe is an all in one tool for students. With this tool we hope students will be be able to better organize their college responsibilites. Students are able to collect points which they can redeem for some fun stickers.
 					</p>
 				</div>
 			</div>
