--- a/manage_me/templates/base.html
+++ b/manage_me/templates/base.html
@@ -10,11 +10,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<!-- Material Icons -->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet"> 
 	<!-- Manifest -->
 	<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-  	<meta name="apple-mobile-web-app-status-bar-style" content="transparent">
+
+  	<link href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  	<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  	<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote.min.css" rel="stylesheet">
+  	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote.min.js"></script>
+
 	<title>{% block title %}{% endblock title %}</title>
+	<style>
+		.brand-logo {
+			font-family: 'Poiret One', cursive;
+		}
+	</style>
+</head>
 <body class="grey lighten-5">
 	
 	{% block quotes %}{% endblock quotes %}
@@ -27,7 +39,6 @@
 	</div>	
 
 	<!-- JQuery -->
-	<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 	<!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<script src="../static/scripts.js"></script>
