--- a/manage_me/templates/notes_create.html
+++ b/manage_me/templates/notes_create.html
@@ -5,14 +5,7 @@
 {% include 'navbar.html' %}
 
 {% block body %}
-<div class="card-panel">
-	<div class="row valign-wrapper">	
-		<div class="col s12">
-			<div class="input-field">
-				<input type="text" name="note" id="" class="materialize-textarea">
-				<label for="note">Start writing notes...</label>
-			</div>	
-		</div>
-	</div>
-</div>
+
+<div id="summernote">Hello Summernote</div>
+
 {% endblock body %}
