--- a/manage_me/templates/notes_create.html
+++ b/manage_me/templates/notes_create.html
@@ -6,6 +6,6 @@
 
 {% block body %}
 
-<div id="summernote">Hello Summernote</div>
-
+<div id="summernote"></div>
+<a href="{{ url_for('universities.course_detail') }}" class="btn deep-purple lighten-2 white-text right">Submit</a>
 {% endblock body %}
