--- a/manage_me/templates/base.html
+++ b/manage_me/templates/base.html
@@ -7,10 +7,6 @@
 	<!-- Animate CSS -->
 	<link rel="stylesheet" href="https://cdn.boomcdn.com/libs/animate-css/3.7.0/animate.css">	
 	<!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-	<!-- Material Icons -->
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet"> 
 	<!-- Manifest -->
 	<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
 
@@ -19,11 +15,21 @@
   	<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   	<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote.min.css" rel="stylesheet">
   	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<!-- Material Icons -->
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet"> 
+
 
 	<title>{% block title %}{% endblock title %}</title>
 	<style>
 		.brand-logo {
 			font-family: 'Poiret One', cursive;
+		}
+
+		.btn {
+			background-color: #ede7f6;
+			color: #311b92;
 		}
 	</style>
 </head>
