--- a/manage_me/templates/base.html
+++ b/manage_me/templates/base.html
@@ -31,6 +31,11 @@
 			background-color: #ede7f6;
 			color: #311b92;
 		}
+
+		.note-editor, .note-frame, .panel, .panel-default {
+			border: none !important;		
+		}
+			
 	</style>
 </head>
 <body class="grey lighten-5">
