--- a/manage_me/templates/project_detail.html
+++ b/manage_me/templates/project_detail.html
@@ -40,7 +40,27 @@
 				</div>
 			</div>
 		</div>
+	
+	<div class="card-panel">
+		<div class="row valign-wrapper">
+			<div class="col s2">
+				<i class="material-icons">group</i>
+			</div>
+			<div class="col s10">
+				<h6 class="deep-purple-text">Add collaborator to this project</h6>
+				<div class="input-field">
+					<input type="text" name="collaborator" class="validate">
+					<label for="collaborator">Type name to search...</label>
+				</div>
+				<div class="input-field">
+					<button class="btn deep-purple lighten-2">Add</button>
+				</div>
+			</div>
+		</div>
 	</div>
+
+	</div>
+	
 
 	<!-- Milestones -->
 	<div class="container">
