--- a/manage_me/templates/project_detail.html
+++ b/manage_me/templates/project_detail.html
@@ -41,7 +41,7 @@
 			</div>
 		</div>
 	
-	<div class="card-panel">
+		<div class="card-panel animated jackIntheBox">
 		<div class="row valign-wrapper">
 			<div class="col s2">
 				<i class="material-icons">group</i>
